Working demo of overflow with shadows (uses a fixed 240px first column for now, this needs to be set in JS programmatically).

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -44,6 +44,7 @@ abbr {
 	max-width: 40vw;
 }
 @media (min-width: 40em) {
+	th.title,
 	td.title {
 		max-width: 12em;
 	}
